// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context commitVariable normal 1`] = `
Object {
  "cst": Object {
    "children": Object {
      "Equal": Array [
        Object {
          "endColumn": 1,
          "endLine": 1,
          "endOffset": 0,
          "image": "=",
          "startColumn": 1,
          "startLine": 1,
          "startOffset": 0,
          "tokenType": Object {
            "CATEGORIES": Array [
              Object {
                "CATEGORIES": Array [],
                "PATTERN": /NOT_APPLICABLE/,
                "categoryMatches": Array [
                  10,
                  11,
                  12,
                  13,
                  14,
                  15,
                  16,
                  17,
                ],
                "categoryMatchesMap": Object {
                  "10": true,
                  "11": true,
                  "12": true,
                  "13": true,
                  "14": true,
                  "15": true,
                  "16": true,
                  "17": true,
                },
                "isParent": true,
                "name": "CompareOperator",
                "tokenTypeIdx": 3,
              },
            ],
            "PATTERN": /=/,
            "categoryMatches": Array [],
            "categoryMatchesMap": Object {},
            "isParent": false,
            "name": "Equal",
            "tokenTypeIdx": 11,
          },
          "tokenTypeIdx": 11,
        },
      ],
      "expression": Array [
        Object {
          "children": Object {
            "combineExpression": Array [
              Object {
                "children": Object {
                  "lhs": Array [
                    Object {
                      "children": Object {
                        "rhs": Array [
                          Object {
                            "children": Object {
                              "lhs": Array [
                                Object {
                                  "children": Object {
                                    "AdditionOperator": Array [
                                      Object {
                                        "endColumn": 77,
                                        "endLine": 1,
                                        "endOffset": 76,
                                        "image": "+",
                                        "startColumn": 77,
                                        "startLine": 1,
                                        "startOffset": 76,
                                        "tokenType": Object {
                                          "CATEGORIES": Array [
                                            Object {
                                              "CATEGORIES": Array [],
                                              "PATTERN": /NOT_APPLICABLE/,
                                              "categoryMatches": Array [
                                                18,
                                                19,
                                                27,
                                              ],
                                              "categoryMatchesMap": Object {
                                                "18": true,
                                                "19": true,
                                                "27": true,
                                              },
                                              "isParent": true,
                                              "name": "AdditionOperator",
                                              "tokenTypeIdx": 4,
                                            },
                                          ],
                                          "PATTERN": /\\\\\\+/,
                                          "categoryMatches": Array [],
                                          "categoryMatchesMap": Object {},
                                          "isParent": false,
                                          "name": "Plus",
                                          "tokenTypeIdx": 18,
                                        },
                                        "tokenTypeIdx": 18,
                                      },
                                    ],
                                    "lhs": Array [
                                      Object {
                                        "children": Object {
                                          "lhs": Array [
                                            Object {
                                              "children": Object {
                                                "lhs": Array [
                                                  Object {
                                                    "children": Object {
                                                      "variableExpression": Array [
                                                        Object {
                                                          "children": Object {
                                                            "At": Array [
                                                              Object {
                                                                "endColumn": 39,
                                                                "endLine": 1,
                                                                "endOffset": 38,
                                                                "image": "@",
                                                                "startColumn": 39,
                                                                "startLine": 1,
                                                                "startOffset": 38,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /@/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "At",
                                                                  "tokenTypeIdx": 23,
                                                                },
                                                                "tokenTypeIdx": 23,
                                                              },
                                                            ],
                                                            "Dollar": Array [
                                                              Object {
                                                                "endColumn": 2,
                                                                "endLine": 1,
                                                                "endOffset": 1,
                                                                "image": "$",
                                                                "startColumn": 2,
                                                                "startLine": 1,
                                                                "startOffset": 1,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /\\\\\\$/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "Dollar",
                                                                  "tokenTypeIdx": 22,
                                                                },
                                                                "tokenTypeIdx": 22,
                                                              },
                                                            ],
                                                            "UUID": Array [
                                                              Object {
                                                                "endColumn": 38,
                                                                "endLine": 1,
                                                                "endOffset": 37,
                                                                "image": "d986e871-cb85-4bd5-b675-87307f60b882",
                                                                "startColumn": 3,
                                                                "startLine": 1,
                                                                "startOffset": 2,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "UUID",
                                                                  "tokenTypeIdx": 26,
                                                                },
                                                                "tokenTypeIdx": 26,
                                                              },
                                                              Object {
                                                                "endColumn": 75,
                                                                "endLine": 1,
                                                                "endOffset": 74,
                                                                "image": "1588aedf-06e1-47f1-9282-d2ffe865974c",
                                                                "startColumn": 40,
                                                                "startLine": 1,
                                                                "startOffset": 39,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "UUID",
                                                                  "tokenTypeIdx": 26,
                                                                },
                                                                "tokenTypeIdx": 26,
                                                              },
                                                            ],
                                                          },
                                                          "name": "variableExpression",
                                                        },
                                                      ],
                                                    },
                                                    "name": "atomicExpression",
                                                  },
                                                ],
                                              },
                                              "name": "chainExpression",
                                            },
                                          ],
                                        },
                                        "name": "multiplicationExpression",
                                      },
                                    ],
                                    "rhs": Array [
                                      Object {
                                        "children": Object {
                                          "lhs": Array [
                                            Object {
                                              "children": Object {
                                                "lhs": Array [
                                                  Object {
                                                    "children": Object {
                                                      "variableExpression": Array [
                                                        Object {
                                                          "children": Object {
                                                            "At": Array [
                                                              Object {
                                                                "endColumn": 116,
                                                                "endLine": 1,
                                                                "endOffset": 115,
                                                                "image": "@",
                                                                "startColumn": 116,
                                                                "startLine": 1,
                                                                "startOffset": 115,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /@/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "At",
                                                                  "tokenTypeIdx": 23,
                                                                },
                                                                "tokenTypeIdx": 23,
                                                              },
                                                            ],
                                                            "Dollar": Array [
                                                              Object {
                                                                "endColumn": 79,
                                                                "endLine": 1,
                                                                "endOffset": 78,
                                                                "image": "$",
                                                                "startColumn": 79,
                                                                "startLine": 1,
                                                                "startOffset": 78,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /\\\\\\$/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "Dollar",
                                                                  "tokenTypeIdx": 22,
                                                                },
                                                                "tokenTypeIdx": 22,
                                                              },
                                                            ],
                                                            "UUID": Array [
                                                              Object {
                                                                "endColumn": 115,
                                                                "endLine": 1,
                                                                "endOffset": 114,
                                                                "image": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
                                                                "startColumn": 80,
                                                                "startLine": 1,
                                                                "startOffset": 79,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "UUID",
                                                                  "tokenTypeIdx": 26,
                                                                },
                                                                "tokenTypeIdx": 26,
                                                              },
                                                              Object {
                                                                "endColumn": 152,
                                                                "endLine": 1,
                                                                "endOffset": 151,
                                                                "image": "475d9e73-e52a-42b3-8a95-477596812900",
                                                                "startColumn": 117,
                                                                "startLine": 1,
                                                                "startOffset": 116,
                                                                "tokenType": Object {
                                                                  "CATEGORIES": Array [],
                                                                  "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                  "categoryMatches": Array [],
                                                                  "categoryMatchesMap": Object {},
                                                                  "isParent": false,
                                                                  "name": "UUID",
                                                                  "tokenTypeIdx": 26,
                                                                },
                                                                "tokenTypeIdx": 26,
                                                              },
                                                            ],
                                                          },
                                                          "name": "variableExpression",
                                                        },
                                                      ],
                                                    },
                                                    "name": "atomicExpression",
                                                  },
                                                ],
                                              },
                                              "name": "chainExpression",
                                            },
                                          ],
                                        },
                                        "name": "multiplicationExpression",
                                      },
                                    ],
                                  },
                                  "name": "additionExpression",
                                },
                              ],
                            },
                            "name": "compareExpression",
                          },
                        ],
                      },
                      "name": "notExpression",
                    },
                  ],
                },
                "name": "combineExpression",
              },
            ],
          },
          "name": "expression",
        },
      ],
    },
    "name": "startExpression",
  },
  "definition": "=$d986e871-cb85-4bd5-b675-87307f60b882@1588aedf-06e1-47f1-9282-d2ffe865974c + $615d7f74-dc97-4aae-8690-b6cba1072a6a@475d9e73-e52a-42b3-8a95-477596812900",
  "dirty": false,
  "functionDependencies": Array [],
  "kind": "expression",
  "name": "baz",
  "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
  "variableDependencies": Array [
    Object {
      "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      "variableId": "1588aedf-06e1-47f1-9282-d2ffe865974c",
    },
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
  "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
  "variableValue": Object {
    "display": "366",
    "success": true,
    "type": "number",
    "updatedAt": null,
    "value": 366,
  },
  "view": Object {},
}
`;

exports[`Context commitVariable normal 2`] = `
Object {
  "&excel::ABS": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;

exports[`Context commitVariable normal 3`] = `
Object {
  "$615d7f74-dc97-4aae-8690-b6cba1072a6a@475d9e73-e52a-42b3-8a95-477596812900": Array [
    Object {
      "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
      "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
    },
  ],
  "$d986e871-cb85-4bd5-b675-87307f60b882@1588aedf-06e1-47f1-9282-d2ffe865974c": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
    Object {
      "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
      "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
    },
  ],
}
`;

exports[`Context findVariable 1`] = `
Object {
  "foo": Array [
    Array [],
    Array [],
  ],
}
`;

exports[`Context findVariable 2`] = `
Object {
  "bar": Array [
    Array [
      Object {
        "args": Array [
          Object {
            "name": "number",
            "type": "number",
          },
        ],
        "async": false,
        "chain": false,
        "description": "Returns the absolute value of a number.",
        "effect": false,
        "examples": Array [
          Object {
            "input": Array [
              -1,
            ],
            "output": 1,
          },
        ],
        "group": "excel",
        "name": "ABS",
        "pure": true,
        "reference": [Function],
        "returns": "number",
      },
    ],
    Array [
      Object {
        "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
        "variableId": "1588aedf-06e1-47f1-9282-d2ffe865974c",
      },
    ],
  ],
}
`;

exports[`Context removeVariable 1`] = `
Array [
  "$d986e871-cb85-4bd5-b675-87307f60b882@1588aedf-06e1-47f1-9282-d2ffe865974c",
]
`;

exports[`Context removeVariable 2`] = `
Object {
  "&excel::ABS": Array [],
}
`;

exports[`Context removeVariable 3`] = `
Object {
  "$d986e871-cb85-4bd5-b675-87307f60b882@1588aedf-06e1-47f1-9282-d2ffe865974c": Array [],
}
`;

exports[`Context reset 1`] = `
Array [
  "$d986e871-cb85-4bd5-b675-87307f60b882@1588aedf-06e1-47f1-9282-d2ffe865974c",
  "$615d7f74-dc97-4aae-8690-b6cba1072a6a@475d9e73-e52a-42b3-8a95-477596812900",
]
`;

exports[`Context reset 2`] = `
Object {
  "&excel::ABS": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;

exports[`Context reset 3`] = `
Object {
  "$d986e871-cb85-4bd5-b675-87307f60b882@1588aedf-06e1-47f1-9282-d2ffe865974c": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;
